--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,7 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  padding: calc(10px + 2vmin) 0 0 0;
 }
 
 .kazooItems:first-child {
@@ -39,6 +40,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
+  margin-top: 20px;
 }
 
 .App-link {
@@ -64,4 +66,44 @@
   border-radius: 3px;
   width: 50px;
   margin: 0 15px 0 0;
+}
+
+.kazooPaddingLeft {
+  margin: 0 0 0 5px;
+}
+
+input[type="text"] {
+  background: #f2f2f2;
+  border: 1px solid;
+  border-color: white #f7f7f7 whitesmoke;
+  border-radius: 3px;
+  margin-left: 5px;
+}
+
+button {
+  background: #f2f2f2;
+  border: 1px solid;
+  border-color: white #f7f7f7 whitesmoke;
+  border-radius: 3px;
+  margin-left: 5px;
+}
+
+.timeSlider {
+  width: 50vw;
+  margin: 25px 0 100px 0;
+}
+
+.sliderContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.clearButton {
+  margin-left:10vw;
+}
+
+.soundBar {
+  width: 200px;
 }
